<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/btn_image_operate"
        android:text="@string/btn_txt_image_operate"
        android:textSize="@dimen/app_tip_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_image_resource"
        android:text="@string/btn_txt_image_resource"
        android:textSize="@dimen/app_tip_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_camera_direct"
        android:text="@string/btn_txt_camera"
        android:textSize="@dimen/app_tip_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!--ImageView
        android:id="@+id/iv_test"
        android:layout_width="100dp"
        android:layout_height="100dp" />-->

</LinearLayout>