<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:textSize="@dimen/app_tip_text_size"
            android:gravity="center"
            android:text="@string/name_key"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <EditText
            android:id="@+id/edt_new_person_name"
            android:textSize="@dimen/app_tip_text_size"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:textSize="@dimen/app_tip_text_size"
            android:gravity="center"
            android:text="@string/phone_number_key"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <EditText
            android:id="@+id/edt_new_phone"
            android:textSize="@dimen/app_tip_text_size"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_add_submit"
        android:text="@string/btn_txt_save"
        android:textSize="@dimen/app_tip_text_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>