<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:textSize="@dimen/app_tip_text_size"
            android:text="@string/name_key"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <EditText
            android:textSize="@dimen/app_tip_text_size"
            android:maxLines="1"
            android:maxLength="8"
            android:inputType="textPersonName"
            android:id="@+id/edt_target_name"
            android:gravity="center_vertical"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:textSize="@dimen/app_tip_text_size"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:textSize="@dimen/app_tip_text_size"
            android:text="@string/phone_number_key"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <EditText
            android:textSize="@dimen/app_tip_text_size"
            android:maxLines="1"
            android:id="@+id/edt_target_phone"
            android:maxLength="16"
            android:gravity="center_vertical"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <Button
            android:textSize="@dimen/app_tip_text_size"
            android:id="@+id/btn_delete"
            android:text="@string/btn_txt_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:textSize="@dimen/app_tip_text_size"
            android:id="@+id/btn_edit"
            android:text="@string/btn_txt_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>