<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<ImageView
    android:id="@+id/iv_operate_image"
    android:src="@drawable/tree"
    android:scaleType="center"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="3"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <EditText
                android:id="@+id/edt_image_water_mark_txt"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/btn_image_water_mark"
                android:textSize="@dimen/app_tip_text_size"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_txt_water_mark"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_image_grow"
                android:text="@string/btn_txt_grow"
                android:textSize="@dimen/app_tip_text_size"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn_image_shrink"
                android:text="@string/btn_txt_shrink"
                android:textSize="@dimen/app_tip_text_size"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>