<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:textSize="@dimen/app_tip_text_size"
            android:text="@string/key"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <EditText
            android:textSize="@dimen/app_tip_text_size"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:id="@+id/edt_add_name"
            android:gravity="center_vertical"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:textSize="@dimen/app_tip_text_size"
            android:text="@string/value"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <EditText
            android:textSize="@dimen/app_tip_text_size"
            android:maxLines="1"
            android:id="@+id/edt_add_phone"
            android:gravity="center_vertical"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <Button
            android:textSize="@dimen/app_tip_text_size"
            android:id="@+id/btn_add_submit"
            android:text="@string/btn_txt_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>